syntax = "proto3";
package proto.greeting_service.v1;

option java_multiple_files = true;
option java_outer_classname = "GreetingServiceProto";
option java_package = "com.abhijith.greeting_service.v1";

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

service GreetingService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}
